Fix wrong hover effect on the property panel for dark mode

--- a/src/Playbook.less
+++ b/src/Playbook.less
@@ -211,7 +211,7 @@ body {
   margin-left: 16px;
 
   &:hover {
-    background: gainsboro;
+    background: var(--panel);
   }
 }
 
